--- a/Desafios/DesafioAndroid- Modulo 02/Android.html
+++ b/Desafios/DesafioAndroid- Modulo 02/Android.html
@@ -79,7 +79,7 @@
         </main>
 
     <footer>
-        <p>Site criado por mim para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por Kaiq para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
