--- a/Modulo.03/Imagens de fundo/index.html
+++ b/Modulo.03/Imagens de fundo/index.html
@@ -26,19 +26,18 @@
         div#q3 {
             background-image: url(imagens/pattern003.png);
         }
+
+        body {
+            background-image: url(imagens/wallpaper001.jpg);
+        }
+
     </style>
 </head>
 <body>
-    <div class="quadrado" id="q1">
+    <div class="quadrado" id="q1"></div>
 
-    </div>
+    <div class="quadrado" id="q2"></div>
 
-    <div class="quadrado" id="q2">
-
-    </div>
-
-    <div class="quadrado" id="q3">
-
-    </div>
+    <div class="quadrado" id="q3"></div>
 </body>
 </html>
