--- a/HTML-CSS/Modulo.03/Imagens de fundo/index2.html
+++ b/HTML-CSS/Modulo.03/Imagens de fundo/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização de fundo</title>
+    <title>Configuração de fundo</title>
     <style>
         body{
             background-image: url(https://www.pngmart.com/files/15/Eyes-PNG-Pic.png);
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-    <h1>Testando aplicação de fundo</h1>
+    <h1>Testando Configuração de fundo</h1>
 </body>
 </html>
