--- a/HTML-CSS/Modulo.03/Imagens de fundo/index4.html
+++ b/HTML-CSS/Modulo.03/Imagens de fundo/index4.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento de fundo</title>
+    <title>Posicionamento de fundo 2</title>
+    <style>
+        body {
+            height: 100vh;
+            background-image: url(https://gustavoguanabara.github.io/images/mascote-html5.png);
+            background-size: 180px;
+            background-repeat: no-repeat;
+            background-position: center center;
+        }
+    </style>
 </head>
 <body>
     
