--- a/HTML-CSS/Modulo.03/Imagens de fundo/index3.html
+++ b/HTML-CSS/Modulo.03/Imagens de fundo/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configuração de fundo 2</title>
+    <title>Posicionamento de fundo</title>
     <style>
         div.bloco{
             background-image: url(imagens/wallpaper003.jpg);
