--- a/HTML-CSS/Modulo.03/Imagens de fundo/index5.html
+++ b/HTML-CSS/Modulo.03/Imagens de fundo/index5.html
@@ -8,11 +8,15 @@
     <style>
         body {
             height: 100vh;
-        background-color: black;
-        background-image: url(imagens/wallpaper002.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
+            /* background: cor imagem posição1 posição2 repere size attachment*/
+            /* ou */
+            background-color: black;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
     }
         main {
         border: 1px solid cornflowerblue;
@@ -27,9 +31,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus in unde ipsum repellendus veritatis reiciendis eos debitis. Facilis, vel atque? Assumenda ab rerum itaque temporibus, odio voluptatem corporis sint illum!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, harum dignissimos! Voluptatem aspernatur perferendis aperiam, dolorum animi incidunt harum natus! Tempora, dolor consectetur laborum optio omnis asperiores aliquid distinctio ducimus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus in unde ipsum repellendus veritatis reiciendis eos debitis. Facilis, vel atque? Assumenda ab rerum itaque temporibus, odio voluptatem corporis sint illum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, harum dignissimos! Voluptatem aspernatur perferendis aperiam, dolorum animi incidunt harum natus! Tempora, dolor consectetur laborum optio omnis asperiores aliquid distinctio ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque exercitationem quo odit beatae at maxime corrupti impedit ipsa sit optio libero aliquid ea voluptatibus, incidunt voluptatum minima. Eius, in odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. In cupiditate quibusdam molestias, aperiam nihil totam fugit praesentium eveniet aspernatur dignissimos. Et a optio blanditiis illum dolor enim libero doloribus at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro aliquid delectus magni voluptatum beatae pariatur minus eligendi dolore, eum hic dicta quis unde in ut odit doloremque error optio sed! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis at aperiam sint deserunt architecto a atque quasi quibusdam dicta. Culpa aperiam dolorum, excepturi magnam nostrum esse autem nam blanditiis soluta?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, harum dignissimos! Voluptatem aspernatur perferendis aperiam, dolorum animi incidunt harum natus! Tempora, dolor consectetur laborum optio omnis asperiores aliquid distinctio ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque exercitationem quo odit beatae at maxime corrupti impedit ipsa sit optio libero aliquid ea voluptatibus, incidunt voluptatum minima. Eius, in odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. In cupiditate quibusdam molestias, aperiam nihil totam fugit praesentium eveniet aspernatur dignissimos. Et a optio blanditiis illum dolor enim libero doloribus at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro aliquid delectus magni voluptatum beatae pariatur minus eligendi dolore, eum hic dicta quis unde in ut odit doloremque error optio sed! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis at aperiam sint deserunt architecto a atque quasi quibusdam dicta. Culpa aperiam dolorum, excepturi magnam nostrum esse autem nam blanditiis soluta?</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, reprehenderit doloribus vel, quam nobis dolorem natus magni quas, pariatur mollitia iusto rerum? Distinctio voluptatem excepturi in, cumque id sed ut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti doloremque sequi enim doloribus quasi sit labore ex aut at esse et provident molestiae perspiciatis omnis, natus eaque, eligendi eveniet! Voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, harum dignissimos! Voluptatem aspernatur perferendis aperiam, dolorum animi incidunt harum natus! Tempora, dolor consectetur laborum optio omnis asperiores aliquid distinctio ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque exercitationem quo odit beatae at maxime corrupti impedit ipsa sit optio libero aliquid ea voluptatibus, incidunt voluptatum minima. Eius, in odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. In cupiditate quibusdam molestias, aperiam nihil totam fugit praesentium eveniet aspernatur dignissimos. Et a optio blanditiis illum dolor enim libero doloribus at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro aliquid delectus magni voluptatum beatae pariatur minus eligendi dolore, eum hic dicta quis unde in ut odit doloremque error optio sed! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis at aperiam sint deserunt architecto a atque quasi quibusdam dicta. Culpa aperiam dolorum, excepturi magnam nostrum esse autem nam blanditiis soluta?</p>
     </main>
 </body>
 </html>
