--- a/HTML-CSS/Modulo.03/Imagens de fundo/index5.html
+++ b/HTML-CSS/Modulo.03/Imagens de fundo/index5.html
@@ -8,8 +8,8 @@
     <style>
         body {
             height: 100vh;
-            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
-            /* background: cor imagem posição1 posição2 repere size attachment*/
+            background: black url(imagens/wallpaper002.jpg) center center cover no-repeat fixed;
+            /* background: cor imagem posição1 posição2 size repere attachment*/
             /* ou */
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
