--- a/HTML-CSS/Modulo.03/Alinhamento/index.html
+++ b/HTML-CSS/Modulo.03/Alinhamento/index.html
@@ -50,18 +50,9 @@
 </head>
 <body>
     <section id="container">
-        <article id="conteudo1">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem vero assumenda tenetur iste eum! Modi, maxime! Fugiat ratione totam recusandae sequi. Error illo reiciendis, inventore repellat quia totam mollitia dolorem. 
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt perferendis recusandae aspernatur, quaerat nihil dolore inventore porro eligendi, dolorum quas omnis fugit minima veniam numquam rerum quam, deleniti sapiente ipsa. 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellat commodi expedita rerum, laborum dolor accusantium doloribus iure labore et quis, quidem modi qui. Amet possimus vero animi incidunt qui. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe sapiente tempora eius neque voluptate ratione pariatur maiores explicabo expedita, officiis earum corporis dolor! Labore voluptatibus quibusdam eius assumenda esse cupiditate?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas error aspernatur eos impedit ab ipsam aperiam illum iure amet quod, veritatis aliquam, magni accusantium eaque repellat quis. Magni, alias porro!
-            Molestias numquam necessitatibus quis vero dicta, debitis voluptas ab. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro quae aspernatur autem.  tempora est laboriosam distinctio maiores eveniet amet facere qui!</p>
-        </article>
+        <article id="conteudo1"></article>
 
-        <article id="conteudo2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero est unde iusto quos dicta, et eum velit, aperiam a repellendus quod. Tempora fuga officiis nam asperiores amet porro qui laudantium.</p>
-        </article>
+        <article id="conteudo2"></article>
     </section>
 </body>
 </html>
