--- a/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
+++ b/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,42 +18,43 @@
 
     <main>
     <section>
-        <p>
-            Estou ficando cansado
-            Da tal tecnologia
-            Só se fala por e-mail
-            Mensagem curta e fria
-            Twitter e Facebook
-            Antes que eu caduque
-            Vou dizer tudo em poesia.
-        </p>
+        <pre>
+        Estou ficando cansado
+        Da tal tecnologia
+        Só se fala por e-mail
+        Mensagem curta e fria
+        Twitter e Facebook
+        Antes que eu caduque
+        Vou dizer tudo em poesia.
+        </pre>
     </section>
 
     <section>
-        <p>
-            Não é mais como era antes
-            É tudo abreviado
-            "Você" só tem duas letras
-            O "O" e o "E" foi riscado
-            Para declarar o amor
-            Basta botar uma flor
-            E um coração desenhado.
-        </p>
+        <pre>
+        Não é mais como era antes
+        É tudo abreviado
+        "Você" só tem duas letras
+        O "O" e o "E" foi riscado
+        Para declarar o amor
+        Basta botar uma flor
+        E um coração desenhado.
+        </pre>
     </section>
 
     <section>
-        <p>
-            Arroba agora não pesa
-            É parte de um endereço
-            Ponto final nem se usa
-            Ou vai até no começo
-            Agora é .com
-            Se o saite é muito bom
-            Ele vale um alto preço.
-        </p>
+        <pre>
+        Arroba agora não pesa
+        É parte de um endereço
+        Ponto final nem se usa
+        Ou vai até no começo
+        Agora é .com
+        Se o saite é muito bom
+        Ele vale um alto preço.
+        </pre>
     </section>
 
     <section>
+        <pre>
         Pra piorar a liguagem
         O emoticom é um risco
         Tem símbolo para tudo
@@ -60,9 +62,11 @@
         Um beijo significa
         Pra entender como fica
         Decifre esse rabisco.
+        </pre>
     </section>
 
     <section>
+        <pre>
         Tenho saudade das cartas
         Escritas com a própria mão
         Mandava no mês de Junho
@@ -70,9 +74,11 @@
         Mas matava a saudade
         Era texto de verdade
         Nas linhas do coração.
+        </pre>
     </section>
 
     <section>
+        <pre>
         Agora, escrevo e envio
         Chegando na mesma hora
         Mas quando vou prosear
@@ -80,9 +86,11 @@
         Abriu outro aplicativo
         O mundo ficou cativo
         Da tecnologia do agora.
+        </pre>
     </section>
 
     <section>
+        <pre>
         Felizmente, pra orar
         Não precisa de internet
         Deus escuta todo mundo
@@ -90,11 +98,12 @@
         Dois pontos são dois joelhos
         Seus lábios são aparelhos
         Deixe que Deus interprete.
+        </pre>
     </section>
     </main>
     
     <footer>
-        <p>Criado por kaiq para a <a href="">CursoEmVideo</a></p>
+        <p>Criado por kaiq para a <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoEmVideo</a></p>
     </footer>
 </body>
 </html>
