--- a/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
+++ b/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
@@ -29,7 +29,7 @@
         </pre>
     </section>
 
-    <section>
+    <section class="imagem" id="joaninha">
         <pre>
         Não é mais como era antes
         É tudo abreviado
@@ -65,7 +65,7 @@
         </pre>
     </section>
 
-    <section>
+    <section class="imagem" id="cartas">
         <pre>
         Tenho saudade das cartas
         Escritas com a própria mão
