--- a/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
+++ b/HTML-CSS/Desafios/DesafioCordel- Modulo03/index.html
@@ -103,7 +103,7 @@
     </main>
     
     <footer>
-        <p>Criado por kaiq para a <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoEmVideo</a></p>
+        <p>Criado por <strong>kaiq</strong> para a <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoEmVideo</a></p>
     </footer>
 </body>
 </html>
