--- a/HTML-CSS/Modulo.03/Tabela/index02.html
+++ b/HTML-CSS/Modulo.03/Tabela/index02.html
@@ -7,12 +7,17 @@
     <title>Tabelas grandes</title>
     <style>
         table {
-            width: 300px;
+            width: 400px;
             height: 80px;
             border-collapse: collapse;
         }
+        caption {
+            border: 1px solid rgb(106, 106, 229);
+            background-color: rgb(158, 158, 224);  
+            font-weight: bold;
+        }
         th {
-            border: 1px solid rgb(84, 84, 197);
+            border: 1px solid rgb(106, 106, 229);
             background-color: rgb(158, 158, 224);  
         }
         td {
@@ -24,7 +29,10 @@
     </style>
 </head>
 <body>
+    <h1>Trabalhando com tabelas grandes</h1>
+    <a href="https://pt.wikipedia.org/wiki/Lista_de_unidades_federativas_do_Brasil_por_popula%C3%A7%C3%A3o">Referências</a>
     <table>
+        <caption>População dos Estados Federativos Brasileiros</caption>
         <head>
             <tr>
                 <th>Estado</th>
@@ -48,15 +56,99 @@
                 <td>Bahia</td>
                 <td class="numero"> 14 659 023</td>
             </tr>
-            
-        </body>
-
-        <foot>
             <tr>
-                <td>total de habitantes</td>
-                <td class="numero">8000</td>
+                <td>Paraná</td>
+                <td class="numero"> 11 835 379</td>
             </tr>
-        </foot>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="numero"> 11 088 065</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="numero"> 9 051 113</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="numero"> 8 936 431</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="numero"> 8 442 962</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="numero"> 7 762 154</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="numero"> 6 950 976</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="numero"> 6 800 605</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="numero"> 4 108 508</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="numero"> 4 030 961</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="numero"> 3 952 262</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="numero"> 3 784 239</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="numero"> 3 303 953</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="numero"> 3 270 174</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="numero"> 3 125 254</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="numero"> 2 923 369</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="numero"> 2 833 742</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="numero"> 2 211 868</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="numero"> 1 616 379</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="numero"> 1 584 306</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="numero"> 829 780</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="numero"> 774 268</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="numero"> 634 805</td>
+            </tr>
+        </body>
     </table>
 </body>
 </html>
