--- a/HTML-CSS/Modulo.03/Tabela/index02.html
+++ b/HTML-CSS/Modulo.03/Tabela/index02.html
@@ -15,16 +15,24 @@
             border: 1px solid rgb(106, 106, 229);
             background-color: rgb(158, 158, 224);  
             font-weight: bold;
+            color: black;
         }
         th {
             border: 1px solid rgb(106, 106, 229);
             background-color: rgb(158, 158, 224);  
+        }
+        tr:nth-child(odd){
+            background-color: rgb(221, 241, 249);
+        }
+        tr:nth-child(even){
+            background-color: rgb(249, 233, 235);
         }
         td {
             border: 1px solid black;
         }
         td.numero {
             text-align: right;
+            width: 100px;
         }
     </style>
 </head>
