--- a/HTML-CSS/Modulo.03/Tabela/index02.html
+++ b/HTML-CSS/Modulo.03/Tabela/index02.html
@@ -10,6 +10,7 @@
             width: 400px;
             height: 80px;
             border-collapse: collapse;
+            position: relative;
         }
         caption {
             border: 1px solid rgb(106, 106, 229);
@@ -158,5 +159,9 @@
             </tr>
         </body>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, quod saepe! Atque possimus consequuntur architecto natus eligendi laboriosam animi iusto itaque qui porro ut eum explicabo, sunt velit quae distinctio!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus velit, sequi totam quis delectus asperiores amet reprehenderit earum a ipsam odit repellat perferendis recusandae error sit accusamus corrupti saepe dolores.
+    </p>
 </body>
 </html>
