--- a/HTML-CSS/Modulo.03/Tabela/index04.html
+++ b/HTML-CSS/Modulo.03/Tabela/index04.html
@@ -8,7 +8,7 @@
         td {
         border: 1px solid black;
         height: 30px;
-        width: 60px;
+        width: 80px;
         text-align: center;
         }
     </style>
@@ -18,7 +18,7 @@
         <tr>
             <td>1</td>
             <td>2</td>
-            <td colspan="2">3</td>
+            <td rowspan="2">3</td>
             <td>4</td>
         </tr>
         <tr>
@@ -31,12 +31,12 @@
             <td>9</td>
         </tr>
         <tr>
-            <td>10</td>
-            <td>11</td>
+            <td rowspan="2">10</td>
+            <td colspan="2">11</td>
             <td>12</td>
-            <td>13</td>
         </tr>
         <tr>
+            <td>13</td>
             <td>14</td>
             <td>15</td>
         </tr>
