--- a/HTML-CSS/Modulo.03/Tabela/Exercicios/exercicio03.html
+++ b/HTML-CSS/Modulo.03/Tabela/Exercicios/exercicio03.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela de Notas</title>
     <style>
-        th, td {
+        th, td, caption{
             border: 1px solid black;
             height: 30px;
             width: 130px;
             text-align: center;
         }
-        th {
+        th{
             background-color: lightgray;
         }
     </style>
