--- a/HTML-CSS/Modulo.03/Tabela/Exercicios/exercicio03.html
+++ b/HTML-CSS/Modulo.03/Tabela/Exercicios/exercicio03.html
@@ -14,10 +14,23 @@
         th{
             background-color: lightgray;
         }
+        .destaque{
+            background-color: rgb(255, 255, 114);
+        }
+        .media {
+            background-color: rgb(254, 113, 113);
+        }
     </style>
 </head>
 <body>
     <table>
+        <colgroup>
+            <col class="">
+            <col class="">
+            <col class="destaque">
+            <col class="destaque">
+            <col class="media">
+        </colgroup>
             <thead>
                 <tr>
                     <th rowspan="2" scope="col">Àrea</th>
